# curvedarch

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  arch.py  check_fan.py  curve_offset.py  generate_test.py  instructions.md  packages-conda-compas2.txt  packages-conda.txt  packages-pip.txt  packages.txt  pyproject.toml  requirements.txt  run_headless.py  test_packing.py
code/: ccu.py  check_violations.py  crossvault.py  curve_offset.py  energy_minimization.py  export.py  geometry_primitives.py  packing.py  render_crossvault.py  render_to_png_mpl.py  render_vault.py  synclastic.py  test_systematic_flattening.py  vault_logic.py  vault_plots.py  vault_shared.py  verify_flattening_visuals.py
papers/: 517_Scheder_VanMele_Block_IASS2025.txt  IASS_2024_Paper_9.txt  s2.txt
